--- a/CarRentalApi/appsettings.json
+++ b/CarRentalApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost, 1433; User=SA; Password=yourStrong(!)Password; Initial Catalog=apbd; Integrated Security=False;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False"
+    "DefaultConnection": "Server=localhost;Database=CarRental;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
